2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Relocate if the inserted char is at column 0.

2009-02-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Set amount to 0 if we are in a function declaration.

2009-02-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguage.h:
	* gtksourceview/c-indenter.c:
	* gtksourceview/gtksourceindentermanager.c:
	* gtksourceview/c-indenter.h:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/simple-indenter.c:
	* gtksourceview/gtksourceview-utils.c:
	* gtksourceview/gtksourceindentermanager.h:
	* gtksourceview/gtksourceindenter.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceindenter-utils.h:
	* gtksourceview/gtksourceview-utils.h:
	* gtksourceview/simple-indenter.h:
	* gtksourceview/gtksourceindenter.h:
	* gtksourceview/gtksourceview.h:
	* gtksourceview/Makefile.am:
	* tests/test-widget.c:
	Added initial framework files.
	Added a simple indenter that makes the same functionaly
	that gsv had before, and added the c-indenter that tries
	to be an smart indenter for c files.

2009-02-26  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gtksourceview/language-specs/po.lang: added
	text/x-gettext-translation-template mime type

2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* tests/test-widget.c: Replace deprecated gtk symbol. Bug #572085

2009-02-25  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcemark.c: chain up finalize.

=== gtksourceview 2.5.5 ===

2009-02-15  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.5

2009-02-10  Johannes Schmid  <jhs@gnome.org>

	* gtksourceview/gtksourceview.c (update_current_line_color):
	#570492 – Canot open editor - crash

2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml: